# cap

./: .dockerignore  .gitignore  Cargo.toml  DEPLOYMENT.md  LICENSE  README.md  SECURITY_MITIGATION_PLAN.md  SECURITY_REVIEW.md  deny.toml  docker-compose.yml
.github/workflows/: api-image.yml  ci.yml  enclava-init-image.yml  release.yml
crates/enclava-api/: Cargo.toml  Dockerfile
crates/enclava-api/migrations/: 0001_users_and_orgs.sql  0002_apps_and_deployments.sql  0003_api_keys_billing_audit.sql  0004_deployment_provenance.sql  0005_dns_records.sql  0006_kbs_owner_bindings.sql  0007_kbs_tls_bindings.sql  0010_processed_webhooks.sql  0011_org_slug.sql  0012_app_signer_identity.sql  0013_kbs_binding_columns.sql  0014_custom_domain_verification.sql  0019_user_signing_keys.sql  0020_org_keyrings.sql  0021_app_tee_domain.sql  0022_dns_records_custom.sql  0023_api_key_hmac_format.sql  0024_billing_intent_fields.sql  0025_workload_artifacts.sql  0026_member_removed_at.sql  0027_unlock_transition_receipts.sql
crates/enclava-api/src/: clients.rs  cosign.rs  deploy.rs  dns.rs  edge.rs  env_gates.rs  kbs.rs  lib.rs  main.rs  models.rs  platform_release.rs  ratelimit.rs  registry.rs  signing_service.rs  state.rs
crates/enclava-api/src/auth/: api_key.rs  email.rs  jwt.rs  middleware.rs  mod.rs  nostr.rs  provider.rs  scopes.rs
crates/enclava-api/src/billing/: btcpay.rs  mod.rs
crates/enclava-api/src/db/: mod.rs  orgs.rs  pool.rs
crates/enclava-api/src/routes/: apps.rs  auth.rs  billing.rs  config.rs  deployments.rs  domains.rs  mod.rs  orgs.rs  status.rs  unlock.rs  users.rs  workload.rs
crates/enclava-api/tests/: integration_test.rs
crates/enclava-cli/: Cargo.toml  Dockerfile  platform-release.json
crates/enclava-cli/scripts/: generate-platform-release.py
crates/enclava-cli/src/: api_client.rs  api_types.rs  app_config.rs  attestation.rs  config.rs  descriptor.rs  keyring.rs  keys.rs  lib.rs  main.rs  platform_release.rs  policy_artifact.rs  tee_client.rs
crates/enclava-cli/src/commands/: app.rs  auth.rs  config.rs  descriptor.rs  domains.rs  init.rs  mod.rs  org.rs  ownership.rs  tier.rs
crates/enclava-cli/tests/: api_client_test.rs  api_contract_test.rs  app_config_test.rs  attestation_test.rs  config_test.rs  deploy_artifacts_test.rs  descriptor_vectors.rs  init_test.rs  tee_client_test.rs
crates/enclava-cli/tests/fixtures/: descriptor_core_hash_v1.hex
crates/enclava-common/: Cargo.toml
crates/enclava-common/src/: canonical.rs  crypto.rs  descriptor.rs  hostnames.rs  image.rs  lib.rs  orgs.rs  types.rs  validate.rs
crates/enclava-common/tests/: crypto_test.rs  image_test.rs
crates/enclava-engine/: Cargo.toml
crates/enclava-engine/src/: lib.rs  testutil.rs  types.rs  validate.rs
crates/enclava-engine/src/apply/: cleanup.rs  drift.rs  engine.rs  gateway.rs  mod.rs  namespace.rs  network_policy.rs  orchestrator.rs  resources.rs  statefulset.rs  teardown.rs  types.rs  watch.rs
crates/enclava-engine/src/manifest/: bootstrap.rs  bootstrap_script.sh  cc_init_data.rs  containers.rs  enclava_init_config.rs  gateway.rs  ingress.rs  kbs_policy.rs  mod.rs  namespace.rs  network_policy.rs  resource_quota.rs  secrets.rs  service.rs  service_account.rs  startup.rs  statefulset.rs  volumes.rs
crates/enclava-engine/tests/: apply_and_watch_test.rs  apply_cleanup_orchestrator_test.rs  apply_cleanup_test.rs  apply_drift_test.rs  apply_namespace_test.rs  apply_network_policy_test.rs  apply_orchestrator_test.rs  apply_resources_test.rs  apply_statefulset_test.rs  apply_teardown_test.rs  apply_types_test.rs  apply_watch_test.rs  manifest_bootstrap_test.rs  manifest_cc_init_data_test.rs  manifest_containers_test.rs  manifest_enclava_init_config_test.rs  manifest_gateway_test.rs  manifest_ingress_adversarial_test.rs  manifest_ingress_test.rs  manifest_integration_test.rs  manifest_kbs_policy_test.rs  manifest_namespace_test.rs  manifest_network_policy_test.rs  manifest_phase12_gate_test.rs  manifest_resource_quota_test.rs  manifest_service_account_test.rs  manifest_service_test.rs  manifest_statefulset_test.rs  manifest_volumes_test.rs  types_test.rs  validate_test.rs
crates/enclava-engine/tests/fixtures/: phase12_manifest_security_snapshot.json
crates/enclava-init/: Cargo.toml  Dockerfile  README.md
crates/enclava-init/src/: chown.rs  config.rs  errors.rs  kbs_fetch.rs  lib.rs  luks.rs  main.rs  secrets.rs  seeds.rs  socket.rs  trustee_verify.rs  unlock.rs  writes.rs
crates/enclava-wait-exec/: Cargo.toml
crates/enclava-wait-exec/src/: main.rs
deploy/api/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  service.yaml
runbooks/: ct-monitoring.md  ct-monitoring.sh  external-tracks.md  launch-readiness-execution-plans.md  migrate-two-hostnames.md  trustee-policy-audit.sh
runbooks/audits/trustee-policy-audit-20260427T194217Z/: CUTOVER-FATE-DECISIONS.md  README.md  REPORT.md  cap-blocks.rego  cap-db-keys.txt  gitops-vs-live-policy.patch  kbs-list-policies-error.json  kbs-loaded-policy.rego  live-configmap-vs-kbs-loaded.patch  live-policy.rego  non-cap.rego  sha256sums.txt  trustee-cm.snapshot.yaml
runbooks/investigations/: B1-letsencrypt-caa-support.md  B2-luks-persistence-kata-snp.md  B3-signing-infra-inventory.md  B4-trustee-policy-audit-playbook.md
