[package]
name = "enclava-api"
version = "0.1.0"
edition.workspace = true

[lib]
name = "enclava_api"
path = "src/lib.rs"

[[bin]]
name = "enclava-api"
path = "src/main.rs"

[[bin]]
name = "kbs-resource-writer"
path = "src/bin/kbs-resource-writer.rs"

[dependencies]
anyhow = { workspace = true }
enclava-engine = { workspace = true }
enclava-common = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
jsonwebtoken = { workspace = true }
futures = { workspace = true }
ed25519-dalek = { workspace = true }
argon2 = { workspace = true }
reqwest = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
nostr = { workspace = true }
hmac = { workspace = true }
tower_governor = { workspace = true }
sigstore = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
json-patch = "4.1"

[dev-dependencies]
axum-test = "20"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
