[package]
name = "enclava-cli"
version = "0.1.0"
edition.workspace = true

[lib]
name = "enclava_cli"
path = "src/lib.rs"

[[bin]]
name = "enclava"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
enclava-common = { workspace = true }
enclava-engine = { path = "../enclava-engine" }
tokio = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
colored = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
nostr = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
x509-cert = { workspace = true }
sev = { version = "7.1.0", default-features = false, features = ["snp", "crypto_nossl"] }

[features]
prod-strict = []

[dev-dependencies]
enclava-engine = { path = "../enclava-engine", features = ["testutil"] }
tempfile = "3"
