[package]
name = "enclava-engine"
version = "0.1.0"
edition.workspace = true

[dependencies]
enclava-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
k8s-openapi = { workspace = true }
serde_yaml = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
kube = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[features]
testutil = []

[dev-dependencies]
serde_json = { workspace = true }
serde_yaml = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }
enclava-common = { workspace = true }
enclava-engine = { path = ".", features = ["testutil"] }
tokio = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
