[package]
name = "enclava-init"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

[[bin]]
name = "enclava-init"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
argon2 = { workspace = true }
hkdf = "0.12"
sha2 = { workspace = true }
aes-gcm = "0.10"
zeroize = { version = "1", features = ["derive", "serde"] }
ed25519-dalek = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = "0.22"
thiserror = { workspace = true }
nix = { version = "0.29", features = ["user", "fs", "mount"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { version = "0.4", features = ["serde"] }
base64 = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
libcryptsetup-rs = "0.15"
enclava-common = { workspace = true }

[dev-dependencies]
tempfile = "3"
rand = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }

[features]
prod-strict = []
luks-integration = []
